<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/textDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:width="100dp"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDateTime" />

    <TextView
        android:id="@+id/textCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"

        android:text=""
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textTemperature"
        app:layout_constraintTop_toTopOf="@+id/textTemperature" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTemperature">

        <TableRow
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fills_like"
                android:layout_marginEnd="24dp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:layout_marginEnd="24dp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:layout_marginEnd="24dp">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_marginTop="4dp">
            <TextView
                android:id="@+id/textFillsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/textWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/textHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black">
            </TextView>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>